# massover.github.io

./: .gitignore  CNAME  Makefile  archives.html  bring-back-print-menus.html  building-realtime-toasts-with-asgi-and-django.html  categories.html  complexity-requires-understanding.html  i-have-a-love-hate-relationship-with-pytest.html  i-like-cheese.html  index.html  logs-dont-lie.html  my-first-review.html  now-is-better-than-earlier.html  pelicanconf.py  publishconf.py  pyproject.toml  reorganizing-my-clothing.html  tags.html  typeddict-was-not-what-i-expected.html  why-i-am-excited-about-asgi-django.html
author/: joshua-massover.html
category/: django.html  life.html  python.html  review.html  software.html
content/: 0001-why-i-am-excited-about-asgi-&-django.md  0004-i-like-cheese.md  0006-now-is-better-than-earlier.md  0007-bring-back-menus.md  0008-logs-dont-lie.md  0009-complexity-requires-understanding.md  0010-reorganizing-my-closet.md  bring-back-menus.md  i-have-a-love-hate-relationship-with-pytest.md  keyboard-review.md  realtime-toasts-with-asgi-and-django.md  typed-dict-was-not-what-i-expected.md  why-i-am-excited-about-asgi-&-django.md
feeds/: all.atom.xml  django.atom.xml  life.atom.xml  python.atom.xml  review.atom.xml  software.atom.xml
projects/: index.html
themes/mnmlist/templates/: article.html  base.html  index.html
