[tool.poetry]
name = "massover.github.io"
version = "0.1.0"
description = ""
authors = ["Joshua Massover <massover@simplebet.io>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = {version = "*", extras = ["Markdown"]}
Markdown = "*"
ghp-import = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
foo = ["Markdown"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

